--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-handlebars-sections": "^1.0.1",
     "express-session": "^1.16.2",
     "fs": "0.0.1-security",
+    "handlebars-helpers": "^0.10.0",
     "hat": "0.0.3",
     "hbs": "~4.0.4",
     "html-minifier": "^4.0.0",
