--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "chart.js": "^2.9.3",
     "cookie-parser": "~1.4.4",
     "cookie-session": "^1.3.3",
     "dateformat": "^3.0.3",
