--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm testd"
+      "pre-commit": "npm test"
     }
   },
   "dependencies": {
