--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm test"
+      "pre-commit": "git-branch-is -r \"^((?!ma).)*$\""
     }
   },
   "dependencies": {
@@ -25,11 +25,11 @@
     "express-handlebars-sections": "^1.0.1",
     "express-session": "^1.16.2",
     "fs": "0.0.1-security",
+    "git-branch-is": "^3.0.0",
     "handlebars-helpers": "^0.10.0",
     "hat": "0.0.3",
     "html-minifier": "^4.0.0",
     "http-errors": "~1.6.3",
-    "husky": "^3.0.9",
     "mdbootstrap": "^4.8.10",
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
@@ -50,6 +50,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
-    "@babel/preset-env": "^7.6.3"
+    "@babel/preset-env": "^7.6.3",
+    "husky": "^3.0.9"
   }
 }
