--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "git-branch-is -r \"^((?!ma).)*$\""
+      "pre-commit": "git-branch-is -r \"^((?!master).)*$\""
     }
   },
   "dependencies": {
