--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     }
   },
   "dependencies": {
+    "babel": "^6.23.0",
+    "babel-eslint": "^10.0.3",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "chart.js": "^2.9.3",
@@ -20,6 +22,7 @@
     "dateformat": "^3.0.3",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
+    "eslint": "^6.6.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "express-handlebars-sections": "^1.0.1",
@@ -49,7 +52,8 @@
     "uuid": "^3.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.4",
+    "@babel/cli": "^7.7.0",
+    "@babel/core": "^7.7.2",
     "@babel/preset-env": "^7.6.3",
     "husky": "^3.0.9"
   }
