--- a/.babelrc
+++ b/.babelrc
@@ -1,18 +1,2 @@
-{
-    "presets": [
-        [
-            "env",
-            {
-                "targets": {
-                    "node": "current"
-                }
-            }
-        ]
-    ],
-    "plugins": [
-        "@babel/plugin-proposal-object-rest-spread",
-        ["babel-plugin-transform-builtin-extend", {
-            "globals": ["Error", "Array"]
-        }]
-    ]
-}
+
+{  "presets": ["@babel/preset-env"]}
