--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "lint": "eslint",
     "start": "nodemon ./bin/www",
-    "s": "bin/pre-push-check.sh"
+    "s": "bin/pre-push-check.sh",
+    "server": "babel-node app",
+    "dev": "set NODE_ENV=development && npm-run-all  server"
   },
   "husky": {
     "hooks": {
@@ -12,6 +15,9 @@
     }
   },
   "dependencies": {
+    "babel": "^6.23.0",
+    "babel-eslint": "^10.0.3",
+    "babel-plugin-transform-builtin-extend": "^1.1.2",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "chart.js": "^2.9.3",
@@ -38,6 +44,7 @@
     "node-fetch": "^2.6.0",
     "nodemailer": "^6.3.1",
     "nodemon": "^1.19.4",
+    "npm-run-all": "^4.1.5",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth": "^2.0.0",
@@ -49,8 +56,13 @@
     "uuid": "^3.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.4",
-    "@babel/preset-env": "^7.6.3",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/node": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "nodemon": "^1.18.9",
+    "eslint": "^6.6.0",
+    "eslint-config-node": "^4.0.0",
     "husky": "^3.0.9"
   }
 }
