--- a/package.json
+++ b/package.json
@@ -9,11 +9,6 @@
     "server": "babel-node app",
     "dev": "set NODE_ENV=development && npm-run-all  server"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "git-branch-is -r \"^((?!master).)*$\""
-    }
-  },
   "dependencies": {
     "babel": "^6.23.0",
     "babel-eslint": "^10.0.3",
@@ -62,7 +57,6 @@
     "@babel/preset-env": "^7.3.1",
     "nodemon": "^1.18.9",
     "eslint": "^6.6.0",
-    "eslint-config-node": "^4.0.0",
-    "husky": "^3.0.9"
+    "eslint-config-node": "^4.0.0"
   }
 }
