--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     }
   },
   "dependencies": {
-    "babel": "^6.23.0",
     "babel-eslint": "^10.0.3",
+    "babel-node": "0.0.1-security",
     "babel-plugin-transform-builtin-extend": "^1.1.2",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
@@ -56,13 +56,13 @@
     "uuid": "^3.3.3"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
-    "@babel/node": "^7.2.2",
-    "@babel/preset-env": "^7.3.1",
-    "nodemon": "^1.18.9",
+    "@babel/cli": "^7.7.0",
+    "@babel/core": "^7.7.2",
+    "@babel/node": "^7.7.0",
+    "@babel/preset-env": "^7.7.1",
     "eslint": "^6.6.0",
     "eslint-config-node": "^4.0.0",
-    "husky": "^3.0.9"
+    "husky": "^3.0.9",
+    "nodemon": "^1.18.9"  
   }
 }
