--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "lint": "eslint",
-    "start": "nodemon ./bin/www",
+    "start": "node app.js",
     "s": "bin/pre-push-check.sh",
     "server": "babel-node app",
     "dev": "set NODE_ENV=development && npm-run-all  server"
