--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "private": true,
   "scripts": {
     "lint": "eslint",
-    "start": "nodemon app.js",
     "s": "bin/pre-push-check.sh",
     "server": "babel-node app",
-    "dev": "set NODE_ENV=development && npm-run-all  server"
+    "start": "set NODE_ENV=development && npm-run-all  server"
   },
   "dependencies": {
     "babel": "^6.23.0",
