--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www",
-    "s": "bin/pre-push-check.sh"
+    "start": "node ./bin/www",
+    "dev": "nodemon  ./bin/www"
   },
   "dependencies": {
     "bcrypt": "^3.0.6",
