--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
     "start": "node ./bin/www",
     "dev": "nodemon  ./bin/www"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "eslint ./ --fix",
+      "pre-push": "npm test"
+    }
+  },
   "dependencies": {
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
@@ -47,6 +53,8 @@
   "devDependencies": {
     "@babel/core": "^7.6.4",
     "@babel/preset-env": "^7.6.3",
+    "eslint": "^6.6.0",
+    "husky": "^3.1.0",
     "nodemon": "^1.18.9"
   }
 }
