--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "start": "node ./bin/www",
     "dev": "nodemon  ./bin/www"
   },
+  "lint-staged": {
+    "routes/*.js": [
+      "eslint --fix",
+      "git add"
+    ]
+  },
   "husky": {
     "hooks": {
-      "pre-commit": "eslint ./ --fix",
+      "pre-commit": "lint-staged",
       "pre-push": "npm test"
     }
   },
@@ -55,6 +61,7 @@
     "@babel/preset-env": "^7.6.3",
     "eslint": "^6.6.0",
     "husky": "^3.1.0",
+    "lint-staged": "^10.0.0-beta.3",
     "nodemon": "^1.18.9"
   }
 }
