--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   },
   "lint-staged": {
     "routes/*.js": [
-      "eslint --fix",
-      "git add"
+      "eslint --fix"
     ]
   },
   "husky": {
