--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon  ./bin/www"
+    "dev": "nodemon  ./bin/www",
+    "test": "mocha  test/*.js --exit"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "eslint ./routes --ext .js,.jsx",
-      "pre-push": "git-branch-is -r \"^((?!master).)*$\""
+      "pre-commit": "eslint . --ext .js,.jsx ",
+      "pre-push": "git-branch-is -r \"^((?!master).)*$\"  && npm run test"
     }
   },
   "dependencies": {
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
     "chart.js": "^2.9.3",
     "cookie-parser": "~1.4.4",
     "cookie-session": "^1.3.3",
@@ -33,6 +35,7 @@
     "http-errors": "~1.6.3",
     "jquery": "^3.4.1",
     "mdbootstrap": "^4.8.10",
+    "mocha": "^6.2.2",
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
