--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,9 +24,9 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
 
-      - run: npm lint
+      - run: npm run lint
 
-      - run: npm test
+      - run: npm run test
 
   deploy:
     machine:
