--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon  ./bin/www",
-    "test": "mocha  test/*.js --exit"
+    "test": "mocha  test/*.js --exit",
+    "lint": "eslint . --ext .js,.jsx"
   },
   "husky": {
     "hooks": {
